--- a/PeopleViewer/PeopleViewer.csproj
+++ b/PeopleViewer/PeopleViewer.csproj
@@ -12,6 +12,11 @@
 	  <ProjectReference Include="..\PeopleViewer.Common\PeopleViewer.Common.csproj" />
 	  <ProjectReference Include="..\PeopleViewer.Presentation\PeopleViewer.Presentation.csproj" />
 	  <ProjectReference Include="..\PeopleViewer.View\PeopleViewer.View.csproj" />
+	  <ProjectReference Include="..\PersonDataReader.CSV\PersonDataReader.CSV.csproj" />
 	</ItemGroup>
+
+	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
+	  <Exec Command="xcopy &quot;$(SolutionDir)AdditionalFiles\*.*&quot; &quot;$(TargetDir)&quot; /Y" />
+	</Target>
 
 </Project>
