demonstration of how easy unit testing can be with DI

--- a/PeopleViewer.Presentation.Tests/PeopleViewer.Presentation.Tests.csproj
+++ b/PeopleViewer.Presentation.Tests/PeopleViewer.Presentation.Tests.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PeopleViewer.Common\PeopleViewer.Common.csproj" />
+    <ProjectReference Include="..\PeopleViewer.Presentation\PeopleViewer.Presentation.csproj" />
   </ItemGroup>
 
 </Project>
