--- a/PeopleViewer.Ninject/PeopleViewer.Ninject.csproj
+++ b/PeopleViewer.Ninject/PeopleViewer.Ninject.csproj
@@ -9,6 +9,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Ninject" Version="4.0.0-beta.1" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <ProjectReference Include="..\PeopleViewer.Common\PeopleViewer.Common.csproj" />
 	  <ProjectReference Include="..\PeopleViewer.Presentation\PeopleViewer.Presentation.csproj" />
 	  <ProjectReference Include="..\PeopleViewer.View\PeopleViewer.View.csproj" />
